--- a/Math123/linearprogramming.html
+++ b/Math123/linearprogramming.html
@@ -109,6 +109,18 @@
     </ol>
 </div>
 
+<h2>Example - I Love ... Lamp</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exlamp">Example</button>
+  <div id="exlamp" class="collapse">
+<img src="./ilovelamp.gif" width=200><br><br>
+The Furniture Mart has two suppliers, A and B, which supply their Emporia and Ardmore stores with lamps.
+One month, they ordered 25 lamps for the Emporia store and 20 for the Ardmore store.
+Supplier A had 10 in stock, and Supplier B had 40 in stock.
+The shipping charges from each supplier to each store are the following:<br>
+<img src="./lampshippingtable.png" width=250><br>
+Find the number of lamps that should be shipped from each supplier to each store in order to minimize shipping costs.
+</div>
+
 <h2>Example - Water ski resource allocation</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex5">Example</button>
   <div id="ex5" class="collapse">
