--- a/math154/lagrange_multipliers.html
+++ b/math154/lagrange_multipliers.html
@@ -44,7 +44,8 @@
    <div id="ex1" class="collapse">
     <ol type='A'>
       <li> Find the max/min of the function \(f(x,y) = 2x^2 + y^2 + 2\) with constraint \(g(x,y) = x^2 + 4y^2 - 4 = 0\).<br><br>
-      <li> Find the max/min of the function \(f(x,y) = x^2 + y^2 \) with constraint \(g(x,y) = xy - 1 = 0\).<br><br>
+      <li> Find the max/min of the function \(f(x,y) = x^2 + y^2 \) with constraint \(g(x,y) = xy - 1 = 0\).<br>
+        <ul><li>Sketch a contour map of \(f\) and the constraint \(g=0\) on the same set of axes.</ul><br>
       </ol>
  </div>
 
