--- a/Math123/linearprogramming.html
+++ b/Math123/linearprogramming.html
@@ -167,7 +167,8 @@ Find the number of lamps that should be shipped from each supplier to each store
      subject to
     $$5x_1 + 3x_2 + 4x_3 \geq 45,$$
     $$5x_1 + 6x_2 + 8x_3 \geq 120,$$
-    $$20x_1 + 6x_2 + 14x_3 \geq 300.$$
+    $$20x_1 + 6x_2 + 14x_3 \geq 300$$
+    $$x \geq 0, y \geq 0, z \geq 0. $$
   </div>
 
   <h2>Example - Oil refinery (LP)</h2>
