--- a/math154/double_integrals.html
+++ b/math154/double_integrals.html
@@ -112,14 +112,14 @@ show(c)
  <h2>Mass of sheet </h2>
  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example</button>
  <div id="ex2" class="collapse">
-   <P>Consider a flat plate of metal with variable density \(\rho(x,y) = e^{2x+y}\) kg/m\(^3\) and \(0 \leq x \leq 2, 0\leq y \leq 4\) m.
+   <P>Consider a flat plate of metal with variable density \(\rho(x,y) = e^{2x+y}\) kg/m\(^2\) and \(0 \leq x \leq 2, 0\leq y \leq 4\) m.
      What is the mass of the sheet?
    </div>
 
 <h2>Center of Mass example</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#excom">Example </button>
 <div id="excom" class="collapse">
-  <P>Consider a flat plate of metal with variable density \(\rho(x,y) = 1 + 2x + 3y\) kg/m\(^3\) and \(-1 \leq x \leq 1, 0\leq y \leq 1\) m.
+  <P>Consider a flat plate of metal with variable density \(\rho(x,y) = 1 + 2x + 3y\) kg/m\(^2\) and \(-1 \leq x \leq 1, 0\leq y \leq 1\) m.
     <ol>
       <li>What is the mass of the plate?
       <li>What is the \(x\) coordinate of the center of mass?
@@ -127,6 +127,43 @@ show(c)
       </ol>
 </div>
 
+<h2>Example - area of triangle</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exampletri">Example</button>
+  <div id="exampletri" class="collapse">
+      <P> Consider a triangular plate with vertices (0,0), (1,0), and (0,2).
+        <ol>
+          <li> What is the area of this triangle?
+          <li> Write an integral that represents the area.
+          <li> Write a double integral that represents the area.
+          <li> Write a double integral that represents the area above, but with the order reversed.
+        </ol>
+
+</div>
+
+<h2>Example </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex3">Example</button>
+  <div id="ex3" class="collapse">
+      <P> Consider the integral \(\displaystyle \int_0^6 \int_{x/3}^2 x \sqrt{y^3 + 1}~dy~dx\).
+        <ol>
+          <li> Sketch the region of integration.
+          <li> Can you evaluate this double integral by integrating with respect to \(y\) first? Why or why not?
+          <li> Can you evaluate this double integral by integrating with respect to \(x\) first? Why or why not?
+          <li> Evaluate the integral.
+        </ol>
+
+</div>
+
+<h2>Example - more metal plates </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4">Example</button>
+  <div id="ex4" class="collapse">
+      <P> Find the mass of a metal plate bounded by \(y=x\) and \(y=x^2\) with density \(\rho(x,y) = 1 + xy\) in kg/m\(^2\).
+</div>
+
+<h2>Example - average value </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex5">Example</button>
+  <div id="ex5" class="collapse">
+      <P> Find the average value of \(f(x,y)= x\) over the region bounded by \(y=e^x, y = 0, x = 0,\) and \(x=1\).
+</div>
 
 <br>
 <br>
