--- a/math154/double_integrals.html
+++ b/math154/double_integrals.html
@@ -119,7 +119,7 @@ show(c)
 <h2>Center of Mass example</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#excom">Example </button>
 <div id="excom" class="collapse">
-  <P>Consider a flat plate of metal with variable density \(\rho(x,y) = 1 + 2x + 3y\) kg/m\(^2\) and \(-1 \leq x \leq 1, 0\leq y \leq 1\) m.
+  <P>Consider a flat plate of metal with variable density \(\rho(x,y) = 1 + 3x^2 + 2y\) kg/m\(^2\) and \(-1 \leq x \leq 1, 0\leq y \leq 1\) m.
     <ol>
       <li>What is the mass of the plate?
       <li>What is the \(x\) coordinate of the center of mass?
