--- a/Math123/simple_compound_interest.html
+++ b/Math123/simple_compound_interest.html
@@ -103,6 +103,86 @@ $(function () {
     By how much is it better or worse in terms of interest rate?
   </div>
 
+<h2>Example - </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex5">Example </button>
+  <div id="ex5" class="collapse">
+  <P> Suppose I put $1000 in a savings account that offers 1% annual interest compounded monthly.
+    <ol>
+      <li>What is the value of the account after 1 month?
+      <li>After two months?
+      <li>After \(n\) months?
+      </ol>
+  </div>
+
+<h2>Example - </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example </button>
+  <div id="ex6" class="collapse">
+  <P> Suppose you invest $1000 in an account at 8% annual interest.
+    What is the value of the account after 3 years if the interest compounds:
+    <ol type='a'>
+      <li>annually?
+      <li>semiannually?
+      <li>quarterly?
+      <li>monthly?
+      <li>daily?
+      </ol>
+  </div>
+
+<h2>Example - </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex7">Example </button>
+  <div id="ex7" class="collapse">
+  <P> Suppose I invest in a fund that advertises a 6% rate and is compounded monthly. How long until I double my money?
+  </div>
+
+<h2>Example - </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex8">Example </button>
+  <div id="ex8" class="collapse">
+  <P> Suppose I invest in a fund that is compounded monthly. What interest rate do I need to double my money in 10 years?
+  </div>
+
+<h2>Example - </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex9">Example </button>
+  <div id="ex9" class="collapse">
+  <P> Consider investing $1 at 8% annual interest. What is the value after 1 year if the compounding is done
+    <ol type='a'>
+      <li>annually?
+      <li>quarterly?
+      <li>monthly?
+      </ol>
+
+    <P> <b>Question</b> What is the difference between the Annual Percentage Yield (APY) and the Annual Interest Rate (APR)? Note that APY is also called effective rate sometimes.
+    <P> Come up with a formula to calculate the APY given the APR and how often interest is compounded.
+
+  </div>
+
+<h2>Example - APY </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex10">Example </button>
+  <div id="ex10" class="collapse">
+  <P> What is the effective rate (APY) on a savings account with 5% nominal rate (APR) compounded monthly?
+  </div>
+
+<h2>Example - Christmas Club </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex11">Example </button>
+  <div id="ex11" class="collapse">
+  <P> Consider someone saving for Christmas by putting money in a savings account earning 3% interest compounded monthly.
+    How much does this person need to put in at the beginning of the year to have $500 on December 1 (11 months later)?
+  <P> Can you explain what Present Value and Future Value mean in these situations?
+  </div>
+
+<h2>Example - </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex12">Example </button>
+  <div id="ex12" class="collapse">
+  <P> Find the present value of $49,158.60 in 5 years compounded quarterly with nominal interest rateof 10%.
+  </div>
+
+<h2>Example - Bookstore </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex13">Example </button>
+  <div id="ex13" class="collapse">
+  <P> The bookstore charges 1% interest per month on your unpaid balance. You charge $232.75 for books and don't pay your bill until the semester is over 4 months later.
+    How much do you owe?
+  </div>
+
+
 <br>
 
 
