--- a/math154/polar_integrals.html
+++ b/math154/polar_integrals.html
@@ -57,6 +57,45 @@
 
 </div>
 
+<h2>Voting questions - </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Voting</button>
+  <div id="ex0" class="collapse">
+
+    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#vq1">Question 1</button>
+      <div id="vq1" class="collapse">
+    <P>Which of the following regions resembles a quarter of a doughnut?
+      <ol type='1'>
+        <li> \(0 \leq r \leq 5, 0 \leq \theta \leq \pi/2\)
+        <li> \(3 \leq r \leq 5, 0 \leq \theta \leq 2\pi\)
+        <li> \(3 \leq r \leq 5, \pi \leq \theta \leq 2\pi\)
+        <li> \(3 \leq r \leq 5, \pi \leq \theta \leq 3\pi/2\)
+        </ol>
+      </div><br>
+
+      <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#vq2">Question 2</button>
+        <div id="vq2" class="collapse">
+      <P>Which of the following is equivalent to \(\displaystyle \int_{0}^{3} \int_{\pi}^{2\pi} r~d\theta~dr \)?
+        <ol type='1'>
+          <li> \(\displaystyle \int_{0}^{3} \int_{-\sqrt{9-x^2}}^{0}1~dy~dx \)
+          <li> \(\displaystyle \int_{-3}^{3} \int_0^{\sqrt{9-x^2}}1~dy~dx \)
+          <li> \(\displaystyle \int_{-3}^{3} \int_0^{\sqrt{9-x^2}}1~dx~dy \)
+          <li> \(\displaystyle \int_{-3}^{0} \int_{-\sqrt{9-x^2}}^{\sqrt{9-x^2}}1~dx~dy \)
+          </ol>
+          <P>(No calculation) What is the value of \(\displaystyle \int_{0}^{3} \int_{\pi}^{2\pi} r~d\theta~dr \)?
+        </div><br>
+
+        <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#vq3">Question 3</button>
+          <div id="vq3" class="collapse">
+        <P>What geometric shape is describe by the equation \(r = \theta\)?
+          <ol type='1'>
+            <li> line
+            <li> circle
+            <li> spiral
+            <li> cardiod
+            <li> none of the above
+            </ol>
+          </div>
+</div>
 
 <h2>Example - </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#example">Example</button>
