--- a/math154/polar_integrals.html
+++ b/math154/polar_integrals.html
@@ -80,6 +80,7 @@
           <li> \(\displaystyle \int_{-3}^{3} \int_0^{\sqrt{9-x^2}}1~dy~dx \)
           <li> \(\displaystyle \int_{-3}^{3} \int_0^{\sqrt{9-x^2}}1~dx~dy \)
           <li> \(\displaystyle \int_{-3}^{0} \int_{-\sqrt{9-x^2}}^{\sqrt{9-x^2}}1~dx~dy \)
+          <li> none of the above
           </ol>
           <P>(No calculation) What is the value of \(\displaystyle \int_{0}^{3} \int_{\pi}^{2\pi} r~d\theta~dr \)?
         </div><br>
