--- a/Math123/annuities_amortization.html
+++ b/Math123/annuities_amortization.html
@@ -37,7 +37,7 @@ $(function () {
         </ul>
       <li><b>Amortization</b>
         <ul>
-        <li>
+        <li> payments: \(\displaystyle R = P \frac{(i}{1 - (1+i)^{-n}} \)
         <li>
         </ul>
       <li>Question: What does each variable represent in the equations above?
@@ -104,36 +104,40 @@ How much money do you have after 6 years?
 <h2>Example - </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example </button>
   <div id="ex6" class="collapse">
-  <P> 
+  <P> A sum of $50,000 is to be repaid over 5 years in equal installments at the end of each year.
+    If an interest rate of 8% is charged on the unpaid balance and interest calculations are made at the end
+    of each year, determine the size of the payments so that the loan (principal and interest charges) is amortized at the end of 5 years.
+    <ul>
+      <li>Make an amortization table.
+      <li>What is the relationship between outstanding balance and present value.
+    </ul>
   </div>
 
-<!--
+
 <h2>Example - </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex7">Example </button>
   <div id="ex7" class="collapse">
-  <P> Suppose I invest in a fund that advertises a 6% rate and is compounded monthly. How long until I double my money?
+  <P> A family borrows $120,000 to buy a house. The bank charges 5.4% interest on unpaid balance with interest computed at the end of each month.
+    Payments will be monthly for 30 years. What is the monthly payment?
   </div>
 
 <h2>Example - </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex8">Example </button>
   <div id="ex8" class="collapse">
-  <P> Suppose I invest in a fund that is compounded monthly. What interest rate do I need to double my money in 10 years?
+  <P> Suppose Paul bought a house 10 years ago for $200,000. He made a down payment of 20% of the purchase price
+    and took out a 30 year mortgage on the rest at 6% per year on the unpaid balance compounded monthly.
+    The house is worth $380,000. How much equity does he have in his home?
   </div>
 
 <h2>Example - </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex9">Example </button>
   <div id="ex9" class="collapse">
-  <P> Consider investing $1 at 8% annual interest. What is the value after 1 year if the compounding is done
-    <ol type='a'>
-      <li>annually?
-      <li>quarterly?
-      <li>monthly?
-      </ol>
-
-    <P> <b>Question</b> What is the difference between the Annual Percentage Yield (APY) and the Annual Interest Rate (APR)? Note that APY is also called effective rate sometimes.
-    <P> Come up with a formula to calculate the APY given the APR and how often interest is compounded.
-
+  <P> Suppose that a family determines that they can afford at most $2000 a month for a mortgage. The current mortgage rates
+    are 6% a year compounded monthly. What is the most they could borrow in a 30 year mortgage?
   </div>
+
+<!-- See November 1 worksheet for more examples
+
 
 <h2>Example - APY </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex10">Example </button>
